--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <svg width="104" height="102" xmlns="http://www.w3.org/2000/svg"><path d="M104 102V59.727H84.114c0-5.871.689-11.182 2.068-15.933 1.379-4.75 3.42-9.287 6.125-13.61C95.01 25.86 98.909 22.257 104 19.375V0c-9.758 4.27-17.712 9.874-23.864 16.813-6.151 6.939-10.712 14.545-13.681 22.818C63.485 47.904 62 59.941 62 75.74V102h42zm-62 0V59.727H22.114c0-5.871.689-11.182 2.068-15.933 1.379-4.75 3.42-9.287 6.125-13.61C33.01 25.86 36.909 22.257 42 19.375V0c-9.652 4.27-17.58 9.874-23.784 16.813C12.01 23.752 7.424 31.358 4.455 39.631 1.485 47.904 0 59.941 0 75.74V102h42z" fill="#A775F1" fill-rule="nonzero"/></svg>
         <div class="profile">
           <div class="image-container">
-            <img src="/images/image-daniel.jpg" alt="daniel image" />
+            <img src="./images/image-daniel.jpg" alt="daniel image" />
           </div>
           <div class="profile-info">
             <p class="name">Daniel Clifford</p>
@@ -64,7 +64,7 @@
       <div class="testimonial grid-item-2">
         <div class="profile">
           <div class="image-container">
-            <img src="/images/image-jonathan.jpg" alt="jonathan image" />
+            <img src="./images/image-jonathan.jpg" alt="jonathan image" />
           </div>
           <div class="profile-info">
             <p class="name">Jonathan Walters</p>
@@ -83,7 +83,7 @@
       <div class="testimonial grid-item-3">
         <div class="profile">
           <div class="image-container">
-            <img src="/images/image-kira.jpg" alt="Kira image" />
+            <img src="./images/image-kira.jpg" alt="Kira image" />
           </div>
           <div class="profile-info">
             <p class="name">Kira Whittle</p>
@@ -110,7 +110,7 @@
       <div class="testimonial grid-item-4">
         <div class="profile">
           <div class="image-container">
-            <img src="/images/image-jeanette.jpg" alt="Jeanette image" />
+            <img src="./images/image-jeanette.jpg" alt="Jeanette image" />
           </div>
           <div class="profile-info">
             <p class="name">Jeanette Harmon</p>
@@ -127,7 +127,7 @@
       <div class="testimonial grid-item-5">
         <div class="profile">
           <div class="image-container">
-            <img src="/images/image-patrick.jpg" alt="Patrick image" />
+            <img src="./images/image-patrick.jpg" alt="Patrick image" />
           </div>
           <div class="profile-info">
             <p class="name">Patrick Abrams</p>
